--- a/tex/kapitel/kapitel_7_zusammenfassung.tex
+++ b/tex/kapitel/kapitel_7_zusammenfassung.tex
@@ -5,6 +5,6 @@ Das Ziel dieser Arbeit war es den Laufplaner für den Lauron III von André Herm
 
 Um dieses Ziel zu erreichen, mussten in \autoref{kap2} die Grundlagen gelegt werden. Das Kapitel beschäftigt sich zunächst mit den beiden relevanten Laufrobotern Lauron und Akrobat, um die Unterschiede, welche für eine  Portierung wichtig sind, herauszuarbeiten. Danach wurden die Grundlagen für die direkte und inverse Kinematik gelegt, welche für die Fußsteuerung des Laufroboters benötigt werden. Danach geht das Kapitel auf verschiedene Arten der Laufplanung ein. Zuletzt führt das Kapitel noch in die Zielsysteme \acf{ROS} und Gazebo ein.
 
-TODO Kapitel 3 - ende
+Danach werden die verwandte Arbeiten von André Herms \autocite{herms2004} und Uli Ruffler \autocite{ruffler2006} in \autoref{kap3} dargestellt. Diese werden als Basis genutzt, um den neuen Laufplaner für den Akrobat in \ac{ROS} und Gazebo zu entwickeln. \autoref{kap4} stellt ein Konzept zur Entwicklung einer solchen Software dar. \autoref{kap5} stellt die mögliche Implementierung dieses Konzepts dar.
 
-Zum Abschluss werden die generierten Bewegungen des Random Samplings, insbesondere die Fuß- und Körperbewegungen, in \autoref{kap5} grafisch mit Hilfe der Bibliothek matplotlib ausgewertet.
+Zum Abschluss werden die generierten Bewegungen des Random Samplings, insbesondere die Fuß- und Körperbewegungen, in \autoref{kap6} grafisch mit Hilfe der Bibliothek matplotlib ausgewertet.
